@@ -345,6 +345,11 @@ histogram. In other words, by default we don't consider histogram bins
   view. These contours are defined by the intersection between the slice
   view planes and the 3D objects.}{}
 
+\globalentry{Show\_markers\_on\_slice}
+{Boolean}{True}
+{True if Display should draw the outlines of markers in the slice window.}
+{}
+
 \globalentry{Show\_slice\_field\_of\_view}
 {Boolean}{False}
 {If true, displays the current width and height of the field of view of
