@@ -27,7 +27,7 @@
 
 /**
  * Initialize the object outline display on the slice.
- * 
+ *
  * This function should always called, even if the actual outline
  * drawing is not enabled (e.g. if Object_outline_enabled is FALSE).
  * Otherwise necessary data structures might not be properly set up
@@ -41,7 +41,7 @@ initialize_slice_object_outline(display_struct *display)
   lines_struct   *lines;
   model_struct   *model;
   display_struct *slice_window;
-  
+
   if ( !get_slice_window( display, &slice_window ) )
     return;
 
@@ -62,10 +62,10 @@ initialize_slice_object_outline(display_struct *display)
   }
 }
 
-/** 
+/**
  * Converts each point on a lines_struct from 3D world coordinates to
  * 2D pixel coordinates.
- * 
+ *
  * \param lines_object The object_struct that corresponds to the lines
  * we will draw in the appropriate view.
  * \param slice_window A pointer to the slice window's display_struct.
@@ -73,7 +73,7 @@ initialize_slice_object_outline(display_struct *display)
  * \param view_index The index of the current view.
  */
 static void
-convert_world_lines_to_pixel(object_struct *lines_object, 
+convert_world_lines_to_pixel(object_struct *lines_object,
                              display_struct *slice_window,
                              int volume_index,
                              int view_index)
@@ -88,7 +88,7 @@ convert_world_lines_to_pixel(object_struct *lines_object,
     VIO_Real y;
     VIO_Real voxel[VIO_MAX_DIMENSIONS];
 
-    convert_world_to_voxel(volume, 
+    convert_world_to_voxel(volume,
                            Point_x(lines->points[i]),
                            Point_y(lines->points[i]),
                            Point_z(lines->points[i]),
@@ -131,14 +131,169 @@ get_automatic_colour(int index)
 }
 
 /**
+ * Function to return points for the four possible corners of 
+ * a square.
+ */
+static void
+square_points(int i, int n, VIO_Real *p_cx, VIO_Real *p_cy)
+{
+  switch ( i ) {
+  case 0:
+    *p_cx = 1.0;
+    *p_cy = 1.0;
+    break;
+  case 1:
+    *p_cx = 1.0;
+    *p_cy = -1.0;
+    break;
+  case 2:
+    *p_cx = -1.0;
+    *p_cy = -1.0;
+    break;
+  case 3:
+    *p_cx = -1.0;
+    *p_cy = 1.0;
+    break;
+  default:
+    handle_internal_error("Illegal point for square.");
+    break;
+  }
+}
+
+/**
+ * Function to return one of n pairs of points for a unit circle.
+ */
+static void
+circle_points(int i, int n, VIO_Real *p_cx, VIO_Real *p_cy)
+{
+  VIO_Real theta = 2.0 * M_PI * (VIO_Real) i / (VIO_Real) n;
+  *p_cx = cos( theta );
+  *p_cy = sin( theta );
+}
+
+/**
+ * Calculates the intersection between a plane and a set of markers.
+ *
+ * \param display The display_struct for the three-D window.
+ * \param plane_normal A vector normal to the current view's plane.
+ * \param plane_constant A scalar giving the position in the current view.
+ * \param x_axis Direction of x axis.
+ * \param y_axis Direction of y axis.
+ * \param lines A structure representing the lines to display.
+ * \param n_points_alloced Number of points in lines_struct.
+ * \param n_indices_alloced Number of indices in lines_struct.
+ * \param n_end_indices_alloced Number of end_indices in lines_struct.
+ */
+static void
+intersect_plane_with_markers(display_struct *display,
+                             VIO_Vector *plane_normal,
+                             VIO_Real plane_constant,
+                             VIO_Real x_axis[],
+                             VIO_Real y_axis[],
+                             lines_struct *lines,
+                             int *n_points_alloced,
+                             int *n_indices_alloced,
+                             int *n_end_indices_alloced)
+{
+  object_traverse_struct object_traverse;
+  object_struct          *current_object;
+
+  initialize_object_traverse( &object_traverse, FALSE, N_MODELS,
+                              display->models );
+
+  while ( get_next_object_traverse(&object_traverse, &current_object) )
+  {
+    if ( current_object->object_type == MARKER &&
+         get_object_visibility( current_object ))
+    {
+      marker_struct *marker = get_marker_ptr( current_object );
+      VIO_Real dist = ( DOT_POINT_VECTOR( marker->position, *plane_normal ) -
+                        plane_constant );
+
+      /* Marker intersects plane if and only if the distance is less than
+       * the marker size.
+       */
+      if ( fabs(dist) < marker->size )
+      {
+        VIO_Point centre;
+        VIO_Point pt;
+        VIO_Real  radius;
+        int       point_index = lines->n_points;
+        int       n_indices = NUMBER_INDICES( *lines );
+        int       i;
+        int       n_segments;
+        void      (*calc_points)(int, int, VIO_Real *, VIO_Real *);
+
+        fill_Point(centre,
+                   Point_x(marker->position) + dist * Vector_x(*plane_normal),
+                   Point_y(marker->position) + dist * Vector_y(*plane_normal),
+                   Point_z(marker->position) + dist * Vector_z(*plane_normal));
+
+        if (marker->type == BOX_MARKER)
+        {
+          n_segments = 4;
+          radius = marker->size;
+          calc_points = square_points;
+        }
+        else
+        {
+          n_segments = 16;
+          radius = sqrt(marker->size * marker->size - dist * dist);
+          calc_points = circle_points;
+        }
+
+        for_less( i, 0, n_segments )
+        {
+          VIO_Real cx;
+          VIO_Real cy;
+
+          (*calc_points)(i, n_segments, &cx, &cy);
+
+          fill_Point(pt,
+                     Point_x(centre) + radius*(cx*x_axis[0] + cy*y_axis[0]),
+                     Point_y(centre) + radius*(cx*x_axis[1] + cy*y_axis[1]),
+                     Point_z(centre) + radius*(cx*x_axis[2] + cy*y_axis[2]));
+          ADD_ELEMENT_TO_ARRAY_WITH_SIZE( lines->points,
+                                          *n_points_alloced,
+                                          lines->n_points,
+                                          pt,
+                                          DEFAULT_CHUNK_SIZE );
+          ADD_ELEMENT_TO_ARRAY_WITH_SIZE( lines->indices,
+                                          *n_indices_alloced,
+                                          n_indices,
+                                          point_index + i, 
+                                          DEFAULT_CHUNK_SIZE );
+        }
+        ADD_ELEMENT_TO_ARRAY_WITH_SIZE( lines->indices,
+                                        *n_indices_alloced,
+                                        n_indices,
+                                        point_index,
+                                        DEFAULT_CHUNK_SIZE );
+
+        int n_items = lines->n_items;
+        ADD_ELEMENT_TO_ARRAY_WITH_SIZE( lines->end_indices,
+                                        *n_end_indices_alloced,
+                                        lines->n_items,
+                                        n_indices, DEFAULT_CHUNK_SIZE );
+
+        ADD_ELEMENT_TO_ARRAY(lines->colours,
+                             n_items,
+                             marker->colour,
+                             DEFAULT_CHUNK_SIZE);
+      }
+    }
+  }
+}
+
+/**
  * Like the functions in intersect/plane_polygons.c, this function
  * calculates the intersection between a plane and a set of polygons.
- * Unlike those older functions, it assigns distinct colours to the 
+ * Unlike those older functions, it assigns distinct colours to the
  * outline it creates.
  * \param display The display_struct for the three-D window.
  * \param plane_normal A vector normal to the current view's plane.
  * \param plane_constant A scalar giving the position in the current view.
- * \param lines_object An object corresponding to the lines we'll display.
+ * \param lines A structure representing the lines to display.
  * \param n_points_alloced Number of points in lines_struct.
  * \param n_indices_alloced Number of indices in lines_struct.
  * \param n_end_indices_alloced Number of end_indices in lines_struct.
@@ -147,32 +302,16 @@ static void
 intersect_plane_with_polygons_coloured(display_struct *display,
                                        VIO_Vector *plane_normal,
                                        VIO_Real plane_constant,
-                                       object_struct *lines_object,
+                                       lines_struct *lines,
                                        int *n_points_alloced,
                                        int *n_indices_alloced,
                                        int *n_end_indices_alloced)
 {
-  object_traverse_struct object_traverse; 
-  lines_struct           *lines;
+  object_traverse_struct object_traverse;
   VIO_Colour             current_colour;
   object_struct          *current_object;
-  int                    colours_size;
-  int                    colours_alloced;
-  VIO_Colour             *colours_ptr;
   int                    poly_no;
   int                    i;
-
-  /* Get the pointer to our current lines object, and reset its
-   * effective size. Note that we separately account for the ALLOCATED
-   * size of these arrays in the outline_struct, so these arrays will
-   * get allocated early on, and gradually reach some maximum size
-   * that corresponds to the longest set of lines needed to represent
-   * the object intersection.
-   */
-  lines = get_lines_ptr(lines_object);
-
-  lines->n_points = 0;
-  lines->n_items = 0;
 
   /* We generate a list of colours for the lines, so that each surface
    * can have a different colour.  If possible, we use the colours of
@@ -181,9 +320,6 @@ intersect_plane_with_polygons_coloured(display_struct *display,
    * artificially "colourize" the surfaces so that duplicate colours
    * aren't easily possible.
    */
-  colours_size = 0;
-  colours_alloced = 0;
-  colours_ptr = NULL;
 
   /* This value just counts up the polygons as we see them, it is used
    * only to try to guarantee that we use a "unique" colour for each
@@ -205,7 +341,7 @@ intersect_plane_with_polygons_coloured(display_struct *display,
       {
         continue;
       }
-        
+
       if (get_object_visibility(current_object))
       {
         /* This is where we colourize the polygons. Most polygons
@@ -229,24 +365,17 @@ intersect_plane_with_polygons_coloured(display_struct *display,
                                           n_indices_alloced,
                                           n_end_indices_alloced ))
           {
-            ADD_ELEMENT_TO_ARRAY_WITH_SIZE(colours_ptr,
-                                           colours_alloced,
-                                           colours_size,
-                                           current_colour,
-                                           DEFAULT_CHUNK_SIZE);
+            int n_items = lines->n_items - 1;
+            ADD_ELEMENT_TO_ARRAY(lines->colours,
+                                 n_items,
+                                 current_colour,
+                                 DEFAULT_CHUNK_SIZE);
           }
         }
       }
       poly_no++;                /* Increment even if invisible. */
     }
   }
-
-  if (lines->colours != NULL)
-  {
-    FREE(lines->colours);
-  }
-  set_object_colours(lines_object, colours_ptr);
-  lines->colour_flag = PER_ITEM_COLOURS;
 }
 
 /**
@@ -254,14 +383,14 @@ intersect_plane_with_polygons_coloured(display_struct *display,
  *
  * When superimposing a 3D object onto a volume, the slice view includes a
  * trace of the 3D object on the currently viewed plane. The code looks through
- * all of the currently loaded 3D polygon objects, and calculates the line 
+ * all of the currently loaded 3D polygon objects, and calculates the line
  * segments that comprise the intersection between the polygons and the view
  * plane. This works for the oblique slice as well as the orthogonal slices.
  *
  * \param slice_window The slice window structure.
  * \param view_index The index of the view to update (0..N_SLICE_VIEWS-1)
  */
-void 
+void
 rebuild_slice_object_outline(display_struct *slice_window, int view_index)
 {
   VIO_Vector     plane_normal;
@@ -272,6 +401,10 @@ rebuild_slice_object_outline(display_struct *slice_window, int view_index)
   VIO_Real       perp_axis[VIO_N_DIMENSIONS];
   VIO_Point      world_origin;
   VIO_Real       xw, yw, zw;
+  VIO_Real       origin[VIO_MAX_DIMENSIONS];
+  VIO_Real       x_axis[VIO_MAX_DIMENSIONS];
+  VIO_Real       y_axis[VIO_MAX_DIMENSIONS];
+  lines_struct   *lines;
 
   /* If the display of the outline isn't enabled, just bail out
    * immediately.
@@ -305,12 +438,15 @@ rebuild_slice_object_outline(display_struct *slice_window, int view_index)
    */
   get_slice_perp_axis(slice_window, volume_index, view_index, perp_axis);
 
+  get_slice_plane(slice_window, volume_index, view_index, origin,
+                  x_axis, y_axis);
+
   /* Convert the perpendicular axis from voxel to world coordinates.
    */
   convert_voxel_vector_to_world(get_nth_volume(slice_window, volume_index),
                                 perp_axis, &xw, &yw, &zw);
 
-  /* Convert the perpendicular axis to the actual VIO_Vector form that 
+  /* Convert the perpendicular axis to the actual VIO_Vector form that
    * we'll need later.
    */
   fill_Vector(plane_normal, xw, yw, zw);
@@ -319,22 +455,50 @@ rebuild_slice_object_outline(display_struct *slice_window, int view_index)
    * of the origin with the normal.
    */
   plane_constant = (Point_x(world_origin) * Vector_x(plane_normal) +
-                    Point_y(world_origin) * Vector_y(plane_normal) + 
+                    Point_y(world_origin) * Vector_y(plane_normal) +
                     Point_z(world_origin) * Vector_z(plane_normal));
+
+  /* Get the pointer to our current lines object, and reset its
+   * effective size. Note that we separately account for the ALLOCATED
+   * size of these arrays in the outline_struct, so these arrays will
+   * get allocated early on, and gradually reach some maximum size
+   * that corresponds to the longest set of lines needed to represent
+   * the object intersection.
+   */
+  lines = get_lines_ptr( outline_ptr->lines );
+  lines->n_points = 0;
+  lines->n_items = 0;
+  if (lines->colours != NULL)
+  {
+    FREE(lines->colours);
+    lines->colours = NULL;
+  }
+  lines->colour_flag = PER_ITEM_COLOURS;
 
   /* Calculate the intersection between the polygons and the plane.
    */
   intersect_plane_with_polygons_coloured(display,
                                          &plane_normal,
                                          plane_constant,
-                                         outline_ptr->lines,
+                                         lines,
                                          &outline_ptr->n_points_alloced,
                                          &outline_ptr->n_indices_alloced,
                                          &outline_ptr->n_end_indices_alloced);
 
+  if (Show_markers_on_slice)
+    intersect_plane_with_markers( display,
+                                  &plane_normal,
+                                  plane_constant,
+                                  x_axis, y_axis,
+                                  lines,
+                                  &outline_ptr->n_points_alloced,
+                                  &outline_ptr->n_indices_alloced,
+                                  &outline_ptr->n_end_indices_alloced);
+
+
   /* Convert the lines to pixel coordinates.
    */
-  convert_world_lines_to_pixel(outline_ptr->lines, slice_window, volume_index, 
+  convert_world_lines_to_pixel(outline_ptr->lines, slice_window, volume_index,
                                view_index);
 
   set_object_visibility(outline_ptr->lines, TRUE);
