@@ -1,3 +1,8 @@
+2016-06-02 Robert D. Vincent <robert.d.vincent@mcgill.ca>
+	* slice_window/outline.c, Include/global_variables.h: Draw
+	the outlines of markers in the slice windows. Can be disabled
+	with the Show_markers_on_slice global.
+
 2016-05-12 Robert D. Vincent <robert.d.vincent@mcgill.ca>
 	* callbacks/marker_ops.c, menu/*: Update marker commands. Command
 	now switches type from cube to sphere without prompting user;
